# Oscillator-Generator

./: .gitignore  CMakeLists.txt
include/: Oscillator.h
src/: Oscillator.cpp  main.cpp
